tweak web interface

--- a/templates/predictions.html
+++ b/templates/predictions.html
@@ -35,7 +35,7 @@ Tokenized chunks (<a href="javascript: toggle('tokens'); ">toggle</a>):
 </div>
 
 <div>
-Predictions (1-7, 1=definitely not litearry, 7=highly literary):
+Predictions (1-7, 1=definitely not literary, 7=highly literary):
 <pre>
 {{ pred }}
 
